# MacGyverHubo

./: CMakeLists.txt  README.md  todo
data/dart/robots/: drchubo_v2_empty.urdf
data/dart/scenes/: 01-World-Robot.urdf
exe/: 01-arm.cpp  02-hips.cpp  03-step.cpp
